src/plugins/cppeditor/cppquickfixes.cpp
@@ -2847,7 +2847,7 @@ void InsertDefFromDecl::match(const CppQuickFixInterface &interface, QuickFixOpe
                 if (Symbol *symbol = simpleDecl->symbols->value) {
                     if (Declaration *decl = symbol->asDeclaration()) {
                         if (Function *func = decl->type()->asFunctionType()) {
-                            if (func->isSignal() || func->isPureVirtual())
+                            if (func->isSignal() || func->isPureVirtual() || func->isFriend())
                                 return;
 
                             // Check if there is already a definition
